[package]
name = "dcg"
version = "0.1.0"
authors = ["p4r17y817"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.3"

[[bench]]
name = "my_benchmark"
harness = false
