[package]
name = "cachegrab"
version = "0.1.0"
authors = ["wabisabia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.5.1"
paste = "1.0.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = { version = "0.8.3", features = ["small_rng"] }

[[bench]]
name = "my_benchmark"
harness = false
